force-app/main/default/objects/Address_Book__c/Address_Book__c.object-meta.xml
<CustomObject>
    <label>Address Book</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Location Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses Book</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>