force-app/main/default/objects/Address_Book__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Contains City name.</description>
    <inlineHelpText>Please Provide City name.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>