force-app/main/default/objects/Address_Book__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Contains State Name</description>
    <inlineHelpText>Provide State Name</inlineHelpText>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>