force-app/main/default/objects/Address_Book__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Contains Street name.</description>
    <inlineHelpText>Please Provide Street name.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>