force-app/main/default/objects/Address_Book__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be verified if the location provided in the record is verified.</description>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>